# ml-showcase

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: app.py
src/my_app/: main.py
src/my_app/utils/: custom_css.py  model_loader.py  models.py  path_util.py
src/my_app/webpages/: about.py  chest_xray_classifier.py  home.py  image_classifier.py  settings.py
